Correct the mobile layout problems

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -79,7 +79,8 @@ h2 {
     line-height: 2rem;
 }
 .container {
-    width: 40rem;
+    width: 90%;
+    max-width: 40rem;
     margin: 0 auto;
     position: relative;
 }
